--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>World clock by Giulia D'Angelo</h1>
-    <footer>This project was coded by Giulia D'Angelo, <a href="#" src="https://github.com/edriophthalma">open sourced on Github </a> </footer>
+    <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma" target="_blank">open sourced on Github </a> </footer>
 <script src="javascript/index.js"></script>
 </body>
 </html>
