added html content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,66 @@
 </head>
 <body>
     <h1>World clock by Giulia D'Angelo</h1>
+    <select>
+        <option value="">Auckland</option>
+        <option value="">Papeete</option>
+        <option value="">Singapore</option>
+        <option value="">New Delhi</option>
+        <option value="">Luanda</option>
+        <option value="">Yamoussoukro</option>
+        <option value="">Pretoria</option>
+        <option value="">Montevideo</option>
+        <option value="">Paramaribo</option>
+        <option value="">Vancouver</option>
+        <option value="">Honolulu</option>
+    </select>
+    <div class="city">
+        <h2>Auckland 🇳🇿</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Papeete 🇵🇫</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Singapore 🇸🇬</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div>
+    <div class="city">
+        <h2>New Delhi 🇮🇳</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city"> <div class="city">
+        <h2>Luanda 🇦🇴</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city"> <div class="city">
+        <h2>Yomoussoukro 🇨🇮</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div>
+    <div class="city">
+        <h2>Pretoria 🇿🇦</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Montevideo 🇺🇾</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Paramaribo 🇸🇷</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Vancouver 🇨🇦</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div><div class="city">
+        <h2>Honolulu 🌺</h2>
+    </div>
+    <div class="date">Thursday, 22 June</div>
+    <div class="time">11 pm</div>
     <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma" target="_blank">open sourced on Github </a> </footer>
 <script src="javascript/index.js"></script>
 </body>
