--- a/index.html
+++ b/index.html
@@ -8,67 +8,42 @@
     <title>World clock by Giulia D'Angelo</title>
 </head>
 <body>
+    <div class="container">
     <h1>World clock by Giulia D'Angelo</h1>
+
     <select>
-        <option value="">Auckland</option>
+       <option value="">Select a city</option>
         <option value="">Papeete</option>
         <option value="">Singapore</option>
         <option value="">New Delhi</option>
-        <option value="">Luanda</option>
         <option value="">Yamoussoukro</option>
-        <option value="">Pretoria</option>
-        <option value="">Montevideo</option>
         <option value="">Paramaribo</option>
         <option value="">Vancouver</option>
         <option value="">Honolulu</option>
     </select>
+   
     <div class="city">
-        <h2>Auckland 🇳🇿</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
+        <div>
         <h2>Papeete 🇵🇫</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
+    
+    <div class="date">Thursday, 22 June</div></div>
+    <div class="time">11:00 <small>PM</small></div></div>
+    <div class="city">
+        <div>
         <h2>Singapore 🇸🇬</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div>
+   
+    <div class="date">Thursday, 22 June</div> </div>
+    <div class="time">1 <small>AM</small></div></div>
     <div class="city">
+        <div>
         <h2>New Delhi 🇮🇳</h2>
+   
+    <div class="date">Thursday, 22 June</div> </div>
+    <div class="time">5 <small>PM</small></div>
+         
     </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city"> <div class="city">
-        <h2>Luanda 🇦🇴</h2>
+
     </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city"> <div class="city">
-        <h2>Yomoussoukro 🇨🇮</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div>
-    <div class="city">
-        <h2>Pretoria 🇿🇦</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
-        <h2>Montevideo 🇺🇾</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
-        <h2>Paramaribo 🇸🇷</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
-        <h2>Vancouver 🇨🇦</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div><div class="city">
-        <h2>Honolulu 🌺</h2>
-    </div>
-    <div class="date">Thursday, 22 June</div>
-    <div class="time">11 pm</div>
     <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma" target="_blank">open sourced on Github </a> </footer>
 <script src="javascript/index.js"></script>
 </body>
