added values timezones

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div class="container">
     <h1>World clock by Giulia D'Angelo</h1>
 
-    <select>
+    <select id="citybox">
        <option value="">Select a city</option>
-        <option value="">Papeete</option>
-        <option value="">Singapore</option>
-        <option value="">New Delhi</option>
-        <option value="">Yamoussoukro</option>
-        <option value="">Paramaribo</option>
-        <option value="">Vancouver</option>
-        <option value="">Honolulu</option>
+        <option value="Pacific/Tahiti">Papeete</option>
+        <option value="Asia/Singapore">Singapore</option>
+        <option value="Asia/Colombo">New Delhi</option>
+        <option value="Africa/Timbuktu">Yamoussoukro</option>
+        <option value="America/Paramaribo">Paramaribo</option>
+        <option value="America/Vancouver">Vancouver</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
     </select>
-   
+   <div class="cities">
     <div class="city" id="papeete">
         <div>
         <h2>Papeete 🇵🇫</h2>
@@ -46,7 +46,7 @@
     <div class="time"></div>
          
     </div>
-
+</div>
     </div>
     <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma" target="_blank">open sourced on Github </a> </footer>
 <script src="javascript/index.js"></script>
