trying dropdown connection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
     <h1>World clock by Giulia D'Angelo</h1>
 
-    <select id="citybox">
+    <select id="city">
        <option value="">Select a city</option>
         <option value="Pacific/Tahiti">Papeete</option>
         <option value="Asia/Singapore">Singapore</option>
@@ -26,25 +26,29 @@
         <option value="Pacific/Honolulu">Honolulu</option>
     </select>
    <div class="cities">
-    <div class="city" id="papeete">
-        <div>
-        <h2>Papeete 🇵🇫</h2>
-    
-    <div class="date"></div></div>
-    <div class="time"></div></div>
-    <div class="city" id="singapore">
-        <div>
-        <h2>Singapore 🇸🇬</h2>
-   
-    <div class="date"></div> </div>
-    <div class="time"></div></div>
-    <div class="city" id="new-delhi">
-        <div>
-        <h2>New Delhi 🇮🇳</h2>
-   
-    <div class="date"></div> </div>
+<div class="city" id="papeete">
+    <div>
+        <h2>Papeete🇵🇫</h2>
+
+        <div class="date"></div>
+    </div>
     <div class="time"></div>
-         
+</div>
+<div class="city" id="singapore">
+    <div>
+        <h2>Singapore 🇸🇬</h2>
+
+        <div class="date"></div>
+    </div>
+    <div class="time"></div>
+</div>
+<div class="city" id="new-delhi">
+    <div>
+        <h2>New Delhi</h2> 🇮🇳</h2>
+
+        <div class="date"></div>
+    </div>
+    <div class="time"></div>
     </div>
 </div>
     </div>
