fixed js and improved html and css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
        <option value="">Select a city</option>
         <option value="Pacific/Tahiti">Papeete</option>
         <option value="Asia/Singapore">Singapore</option>
-        <option value="Asia/Colombo">New Delhi</option>
-        <option value="Africa/Timbuktu">Yamoussoukro</option>
+        <option value="Asia/Colombo">Colombo</option>
+        <option value="Africa/Timbuktu">Timbuktu</option>
         <option value="America/Paramaribo">Paramaribo</option>
         <option value="America/Vancouver">Vancouver</option>
         <option value="Pacific/Honolulu">Honolulu</option>
@@ -44,7 +44,7 @@
 </div>
 <div class="city" id="new-delhi">
     <div>
-        <h2>New Delhi</h2> 🇮🇳</h2>
+        <h2>Colombo 🇮🇱</h2>
 
         <div class="date"></div>
     </div>
