--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <option value="America/Paramaribo">Paramaribo</option>
         <option value="America/Vancouver">Vancouver</option>
         <option value="Pacific/Honolulu">Honolulu</option>
+        <option value="current">Current location</option>
     </select>
    <div class="cities">
 <div class="city" id="papeete">
