--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 </div>
     </div>
-    <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma" target="_blank">open sourced on Github </a> </footer>
+    <footer>This project was coded by Giulia D'Angelo, <a href="https://github.com/edriophthalma/worldclock.git" target="_blank">open sourced on Github </a> </footer>
 <script src="javascript/index.js"></script>
 </body>
 </html>
